--- a/css/style.css
+++ b/css/style.css
@@ -10,5 +10,8 @@ body {
 
 #grid-container {
   max-width: 1400px;
+  height: 100vh;
   margin: 0 auto;
+  display: grid;
+  grid-template-rows: 78px 1fr 78px;
 }
