--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ header {
 }
 
 #logo {
-  font-family: DM Serif Display;
+  font-family: "DM Serif Display";
   font-size: 24px;
 }
 
@@ -52,7 +52,7 @@ header nav ul {
   display: flex;
   list-style-type: none;
   gap: 20px;
-  font-family: DM Sans;
+  font-family: "DM Sans";
   font-size: 16px;
 }
 
@@ -62,7 +62,7 @@ main {
 
 #banner {
   margin-top: 28px;
-  width: 100%;
+  max-width: 100%;
   height: 368px;
   background-image: url(../img/desayuno.png);
   background-position: center center;
@@ -75,6 +75,7 @@ main {
   position: relative;
   padding: 56px;
 }
+
 #banner::before {
   position: absolute;
   content: "";
@@ -85,15 +86,98 @@ main {
 
 .phara {
   position: relative;
-  font-family: DM Serif Display;
+  font-family: "DM Serif Display";
   font-size: 64px;
   width: 448px;
   color: white;
   line-height: 0.9;
 }
 
+#titulo {
+  font-family: "DM Serif Display";
+  font-size: 24px;
+  padding-top: 40px;
+  padding-bottom: 28px;
+  color: #7e4333;
+}
+
+#Recipes a {
+  text-decoration: none;
+}
+
+#Recipes {
+  margin: 0 auto;
+}
+
+#Recipes img {
+  width: 380px;
+  height: 248px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+#Recipes .recipe {
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+  transition: transform 0.3s ease;
+}
+
+#Recipes .recipe:hover {
+  transform: scale(1.1);
+}
+
+#Recipes h2 {
+  padding-top: 20px;
+  padding-left: 10px;
+  font-family: "DM Serif Display";
+  color: #7e4333;
+  font-size: 36px;
+}
+
+#Recipes ul {
+  padding-top: 11px;
+}
+
+#Recipes ul li {
+  font-family: "DM Sans";
+  font-size: 16px;
+  color: black;
+}
+.recipes1 {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.recipes2 {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 80px;
+  width: 100%;
+}
+
 footer {
-  background-color: #255538;
   grid-area: footer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  max-height: 78px;
+  background-color: #255538;
   border-radius: 6px 6px 0 0;
+}
+
+#logo_foot {
+  font-family: "DM Serif Display";
+  font-size: 24px;
+  padding-left: 20px;
+}
+
+footer p {
+  font-family: "DM Sans";
+  font-size: 16px;
+  color: white;
+  padding-right: 20px;
 }
