--- a/css/style2.css
+++ b/css/style2.css
@@ -18,7 +18,7 @@ body {
 
   display: grid;
   grid-template-rows: 78px 1fr 78px;
-  grid-template-columns: 100px 1fr 1fr 100px;
+  grid-template-columns: 100px 2fr 1fr 100px;
 
   grid-template-areas:
     "header header header header"
@@ -54,10 +54,26 @@ header nav ul {
   gap: 20px;
   font-family: "DM Sans";
   font-size: 16px;
+  align-items: center;
 }
 
 a {
   text-decoration: none;
+}
+
+.switch {
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  background-color: white;
+  border-radius: 100%;
+}
+.switch button {
+  width: 100%;
+  height: 100%;
+  background-image: url(../img/sol.png);
+  background-size: cover;
+  border: 0;
 }
 
 main {
@@ -65,8 +81,8 @@ main {
   background-color: white;
   padding: 20px;
   border-radius: 6px;
-  margin-right: 20px;
   margin-bottom: 60px;
+  width: 99%;
 }
 
 main h1 {
@@ -94,7 +110,7 @@ span {
   font-size: 16px;
 }
 #principal {
-  width: 780px;
+  width: 100%;
   height: 287px;
   object-fit: cover;
   border-radius: 6px;
@@ -123,6 +139,14 @@ span {
 #instrucciones h2 {
   margin-bottom: 10px;
 }
+
+#sidebar {
+  grid-area: aside;
+  width: 98%;
+  margin-left: 10px;
+  margin-bottom: 20px;
+}
+
 #ingredientes {
   background-color: white;
   border-radius: 6px;
@@ -134,9 +158,6 @@ span {
   margin-bottom: 20px;
 }
 
-#sidebar {
-  grid-area: aside;
-}
 #nutricion span {
   font-family: "DM Sans";
   font-size: 16px;
@@ -149,7 +170,7 @@ span {
   padding: 8px;
 }
 
-#nutricion .cantidades {
+.cantidades {
   color: #7e4333;
   font-weight: 700;
 }
@@ -167,6 +188,7 @@ span {
   object-fit: cover;
   margin-top: 20px;
   border-radius: 6px;
+  aspect-ratio: 1/1;
 }
 
 #more_recipes .container_padre {
@@ -195,7 +217,7 @@ footer {
   justify-content: space-between;
   align-items: center;
 
-  max-height: 78px;
+  height: 78px;
   background-color: #255538;
   border-radius: 6px 6px 0 0;
 }
@@ -211,4 +233,47 @@ footer p {
   font-size: 16px;
   color: white;
   padding-right: 20px;
+}
+
+body.active {
+  background-color: black;
+}
+
+body.active .switch button {
+  background-image: url(../img/luna.png);
+}
+
+body.active main,
+body.active #ingredientes,
+body.active #more_recipes {
+  background-color: #2f2f2f;
+}
+
+body.active #preparation {
+  background-color: #4e4d4e;
+}
+body.active #nutricion div {
+  border-bottom: 2px solid #4e4d4e;
+}
+body.active h1,
+body.active h2,
+body.active h3,
+body.active li,
+body.active p,
+body.active span {
+  color: white;
+}
+
+@media (max-width: 850px) {
+  #grid-container {
+    display: grid;
+    grid-template-rows: 78px 1fr 1fr 78px;
+    grid-template-columns: 100px 2fr 1fr 100px;
+
+    grid-template-areas:
+      "header header header header"
+      "main main main main"
+      "aside aside aside aside"
+      "footer footer footer footer";
+  }
 }
