--- a/css/style-form.css
+++ b/css/style-form.css
@@ -18,7 +18,7 @@ body {
 
   display: grid;
   grid-template-rows: 78px 1fr 78px;
-  grid-template-columns: 300px 1fr 300px;
+  grid-template-columns: 1fr 2fr 1fr;
 
   grid-template-areas:
     "header header header"
@@ -123,7 +123,7 @@ main {
   margin-top: 20px;
   width: 120px;
   padding: 10px;
-  border-radius: 80px;
+  border-radius: 6px;
   border: none;
   background-color: #255538;
   color: white;
@@ -165,13 +165,21 @@ body.active .switch button {
   background-image: url(../img/luna.png);
 }
 
-body.active #Recipes .recipe {
+body.active .container {
   background-color: #2f2f2f;
 }
 
 body.active h1,
-body.active #Recipes h2,
-body.active #Recipes .recipe li {
+body.active h2,
+body.active p {
+  color: white;
+}
+
+body.active #Recipe_name,
+body.active #Preparation_Time,
+body.active #Ingredients,
+body.active #Instructions {
+  background-color: #4e4d4e;
   color: white;
 }
 
@@ -181,13 +189,5 @@ body.active #Recipes .recipe li {
       "header header header"
       "main main main"
       "footer footer footer";
-  }
-  #Recipes .recipe {
-    width: 49%;
-  }
-}
-@media (max-width: 560px) {
-  #Recipes .recipe {
-    width: 100%;
   }
 }
