correction of spaces in the CSS of the recipes

--- a/css/style2.css
+++ b/css/style2.css
@@ -276,4 +276,11 @@ body.active span {
       "aside aside aside aside"
       "footer footer footer footer";
   }
+  main {
+    width: 100%;
+  }
+  #sidebar {
+    margin-left: 0;
+    width: 100%;
+  }
 }
