--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ header nav ul {
 }
 main {
   grid-area: main;
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 
 #banner {
@@ -122,7 +122,6 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-bottom: 40px;
   width: 100%;
 }
 #Recipes a {
@@ -204,7 +203,7 @@ body.active #Recipes .recipe li {
   color: white;
 }
 
-@media (max-width: 780px) {
+@media (max-width: 1100px) {
   #grid-container {
     grid-template-areas:
       "header header header"
@@ -218,5 +217,8 @@ body.active #Recipes .recipe li {
 @media (max-width: 560px) {
   #Recipes .recipe {
     width: 100%;
+  }
+  #Recipes img {
+    height: 190px;
   }
 }
