--- a/css/style2.css
+++ b/css/style2.css
@@ -264,7 +264,7 @@ body.active span {
   color: white;
 }
 
-@media (max-width: 850px) {
+@media (max-width: 980px) {
   #grid-container {
     display: grid;
     grid-template-rows: 78px 1fr 1fr 78px;
@@ -278,6 +278,7 @@ body.active span {
   }
   main {
     width: 100%;
+    margin-bottom: 20px;
   }
   #sidebar {
     margin-left: 0;
