--- a/css/style-form.css
+++ b/css/style-form.css
@@ -183,6 +183,12 @@ body.active #Instructions {
   color: white;
 }
 
+@media (max-width: 1100px) {
+  #grid-container {
+    grid-template-columns: 1fr 4fr 1fr;
+  }
+}
+
 @media (max-width: 780px) {
   #grid-container {
     grid-template-areas:
